Created page with "|Select_text=Stiskněte levé tlačítko myši nad objektem, který chcete vybrat."

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -198,8 +198,7 @@
 <th colspan="2" style="width:20%; background: #ededff; padding:2px 2px;">Posun pohledu
 </th>
 <th style="width:20%; background: #ededff; padding:2px 2px;">Naklon&#283;n&iacute; pohledu
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></th></tr>
+</th></tr>
 <tr style="text-align:center;">
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Hand_cursor.png&amp;filetimestamp=20240917104542&amp;.html" class="mw-file-description"><img src="../File/Hand_cursor.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="24" data-file-height="24"></a></span>
 </td>
@@ -223,8 +222,7 @@
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB%2BRMB_hold.svg&amp;filetimestamp=20181210193540&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB%2BRMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
-<td>Press the left mouse button over an object you want to select.
-
+<td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Use the mouse wheel to zoom in and out.
@@ -1140,15 +1138,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111200459
+Cached time: 20260111200604
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.333 seconds
-Real time usage: 0.509 seconds
-Preprocessor visited node count: 1637/1000000
-Post&#8208;expand include size: 78392/2097152 bytes
-Template argument size: 29093/2097152 bytes
+CPU time usage: 0.342 seconds
+Real time usage: 0.890 seconds
+Preprocessor visited node count: 1636/1000000
+Post&#8208;expand include size: 78342/2097152 bytes
+Template argument size: 29043/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1156,19 +1154,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  104.296      1 -total
-  8.24%    8.592      8 Template:ASCII
-  7.67%    8.003      1 Template:OpenSCAD_Navigation
-  7.49%    7.814      1 Template:Userdocnavi/cs
-  7.34%    7.656      2 Template:OpenInventor_Navigation
-  5.90%    6.157      2 Template:Docnav
-  5.37%    5.603      1 Template:CAD_Navigation
-  4.54%    4.737      1 Template:Touchpad_Navigation/cs
-  4.50%    4.697     75 Template:KEY
-  4.35%    4.536      1 Template:SolidWorks_Navigation
+100.00%  147.648      1 -total
+ 16.87%   24.904      1 Template:Blender_Navigation
+ 13.47%   19.890      8 Template:ASCII
+  9.87%   14.580      1 Template:MayaGesture_Navigation
+  6.18%    9.122      1 Template:OpenCascade_Navigation
+  6.12%    9.036      1 Template:Userdocnavi/cs
+  5.20%    7.684      2 Template:OpenInventor_Navigation
+  5.12%    7.560      1 Template:Inventor_Navigation/cs
+  3.82%    5.633      1 Template:SolidWorks_Navigation
+  3.81%    5.622      1 Template:CAD_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111200458 and revision id 1735981. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111200603 and revision id 1735985. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
