Updated page TechDraw Workbench/de

--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -182,9 +182,7 @@
 <h3><span id="Linien_hinzuf.C3.BCgen"></span><span class="mw-headline" id="Linien_hinzuf&uuml;gen">Linien hinzuf&uuml;gen</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_LeaderLine.svg&amp;filetimestamp=20240708195607&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/de">Hinweislinie</a>: F&uuml;gt einer Ansicht eine Hinweislinie hinzu.</li></ul>
 <ul><li><span id="TechDraw_CenterLineGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_FaceCenterLine.html" title="TechDraw FaceCenterLine/de">Mittellinie auf Fl&auml;che</a>: F&uuml;gt ausgew&auml;hlten Fl&auml;chen eine Mittellinie hinzu.</span></li></ul>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_2LineCenterLine.svg&amp;filetimestamp=20241127175330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_2LineCenterLine.html" title="TechDraw 2LineCenterLine/de">Mittellinie zwischen 2 Linien hinzuf&uuml;gen</a>: F&uuml;gt eine Mittellinie zwischen 2 Linien hinzu.</li></ul></dd></dl>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_2LineCenterLine.svg&amp;filetimestamp=20241127175330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_2LineCenterLine.html" title="TechDraw 2LineCenterLine/de">Mittellinie zwischen 2 Linien</a>: F&uuml;gt eine Mittellinie zwischen 2 Linien hinzu.</li></ul>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCenterLine.svg&amp;filetimestamp=20241127175331&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCenterLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_2PointCenterLine.html" title="TechDraw 2PointCenterLine/de">Mittellinie zwischen 2 Punkten hinzuf&uuml;gen</a>: F&uuml;gt eine Mittellinie zwischen 2 Punkten hinzu.</li></ul></dd></dl>
 </div>
@@ -305,13 +303,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111200529
+Cached time: 20260111200613
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.297 seconds
-Real time usage: 0.383 seconds
-Preprocessor visited node count: 874/1000000
+CPU time usage: 0.326 seconds
+Real time usage: 0.971 seconds
+Preprocessor visited node count: 873/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -321,18 +319,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.483      1 -total
- 26.89%    5.240      1 Template:TechDraw_Tools_navi/de
- 16.87%    3.287      2 Template:Navigation_menu_2
- 15.31%    2.982      1 Template:Userdocnavi/de
- 13.34%    2.599     25 Template:Version/de
- 11.81%    2.300      2 Template:Docnav/de
- 10.38%    2.023      5 Template:VersionPlus/de
-  6.15%    1.199      1 Template:KEY
-  5.72%    1.114      1 Template:TOCright
+100.00%  108.659      1 -total
+ 33.13%   35.996      1 Template:TechDraw_Tools_navi/de
+ 21.95%   23.855      1 Template:Userdocnavi/de
+ 14.92%   16.217      5 Template:VersionPlus/de
+ 10.60%   11.521      2 Template:Navigation_menu_2
+  9.52%   10.340     25 Template:Version/de
+  6.94%    7.541      2 Template:Docnav/de
+  6.32%    6.862      1 Template:TOCright
+  5.08%    5.522      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111200529 and revision id 1735983. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111200612 and revision id 1735987. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
