--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -223,10 +223,8 @@
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
 <td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Use the mouse wheel to zoom in and out.
-
+</td>
+<td>Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat pohled.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Clicking the middle mouse button re-centers the view on the location of the pointer. Alternatively, aim the pointer and press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">H</span> on the keyboard.
 </p>
@@ -1138,15 +1136,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111200604
+Cached time: 20260111200643
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.342 seconds
-Real time usage: 0.890 seconds
-Preprocessor visited node count: 1636/1000000
-Post&#8208;expand include size: 78342/2097152 bytes
-Template argument size: 29043/2097152 bytes
+CPU time usage: 0.354 seconds
+Real time usage: 0.608 seconds
+Preprocessor visited node count: 1635/1000000
+Post&#8208;expand include size: 78311/2097152 bytes
+Template argument size: 29012/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1154,19 +1152,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  147.648      1 -total
- 16.87%   24.904      1 Template:Blender_Navigation
- 13.47%   19.890      8 Template:ASCII
-  9.87%   14.580      1 Template:MayaGesture_Navigation
-  6.18%    9.122      1 Template:OpenCascade_Navigation
-  6.12%    9.036      1 Template:Userdocnavi/cs
-  5.20%    7.684      2 Template:OpenInventor_Navigation
-  5.12%    7.560      1 Template:Inventor_Navigation/cs
-  3.82%    5.633      1 Template:SolidWorks_Navigation
-  3.81%    5.622      1 Template:CAD_Navigation
+100.00%   92.343      1 -total
+ 12.92%   11.933      8 Template:ASCII
+  7.36%    6.794      1 Template:Userdocnavi/cs
+  6.65%    6.138      1 Template:SiemensNX_Navigation
+  5.82%    5.377      1 Template:Touchpad_Navigation/cs
+  5.51%    5.090      1 Template:Touchpad_Navigation
+  5.49%    5.071      1 Template:OpenSCAD_Navigation
+  5.39%    4.977      1 Template:SolidWorks_Navigation
+  4.98%    4.603      1 Template:TinkerCAD_Navigation
+  4.79%    4.419     75 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111200603 and revision id 1735985. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111200643 and revision id 1735989. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
