--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -183,9 +183,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_LeaderLine.svg&amp;filetimestamp=20240708195607&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/de">Hinweislinie</a>: F&uuml;gt einer Ansicht eine Hinweislinie hinzu.</li></ul>
 <ul><li><span id="TechDraw_CenterLineGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_FaceCenterLine.html" title="TechDraw FaceCenterLine/de">Mittellinie auf Fl&auml;che</a>: F&uuml;gt ausgew&auml;hlten Fl&auml;chen eine Mittellinie hinzu.</span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_2LineCenterLine.svg&amp;filetimestamp=20241127175330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_2LineCenterLine.html" title="TechDraw 2LineCenterLine/de">Mittellinie zwischen 2 Linien</a>: F&uuml;gt eine Mittellinie zwischen 2 Linien hinzu.</li></ul>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCenterLine.svg&amp;filetimestamp=20241127175331&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCenterLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_2PointCenterLine.html" title="TechDraw 2PointCenterLine/de">Mittellinie zwischen 2 Punkten hinzuf&uuml;gen</a>: F&uuml;gt eine Mittellinie zwischen 2 Punkten hinzu.</li></ul></dd></dl>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCenterLine.svg&amp;filetimestamp=20241127175331&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCenterLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_2PointCenterLine.html" title="TechDraw 2PointCenterLine/de">Mittellinie zwischen 2 Punkten</a>: F&uuml;gt eine Mittellinie zwischen 2 Punkten hinzu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCosmeticLine.svg&amp;filetimestamp=20201127095856&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_2PointCosmeticLine.html" title="TechDraw 2PointCosmeticLine/de">Hilfslinie durch 2 Punkte hinzuf&uuml;gen</a>: F&uuml;gt eine Hilfslinie hinzu, die 2 Knoten verbindet</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_DecorateLine.svg&amp;filetimestamp=20241127175335&amp;.html" class="mw-file-description"><img src="../File/TechDraw_DecorateLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_DecorateLine.html" title="TechDraw DecorateLine/de">Liniendarstellung &auml;ndern</a>: &Auml;ndert das Aussehen ausgew&auml;hlter Linien.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ShowAll.svg&amp;filetimestamp=20201127100141&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ShowAll.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ShowAll.html" title="TechDraw ShowAll/de">Ausgeblendete Kanten ein-/ausblenden</a>: Blendet als unsichtbar gekennzeichnete Linien/Kanten einer Ansicht ein bzw. (wieder) aus.</li></ul>
@@ -303,13 +301,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111200613
+Cached time: 20260111200654
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.326 seconds
-Real time usage: 0.971 seconds
-Preprocessor visited node count: 873/1000000
+CPU time usage: 0.376 seconds
+Real time usage: 0.867 seconds
+Preprocessor visited node count: 872/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -319,18 +317,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  108.659      1 -total
- 33.13%   35.996      1 Template:TechDraw_Tools_navi/de
- 21.95%   23.855      1 Template:Userdocnavi/de
- 14.92%   16.217      5 Template:VersionPlus/de
- 10.60%   11.521      2 Template:Navigation_menu_2
-  9.52%   10.340     25 Template:Version/de
-  6.94%    7.541      2 Template:Docnav/de
-  6.32%    6.862      1 Template:TOCright
-  5.08%    5.522      1 Template:KEY
+100.00%   50.832      1 -total
+ 28.61%   14.542      1 Template:TechDraw_Tools_navi/de
+ 14.00%    7.117      2 Template:Navigation_menu_2
+ 12.53%    6.372     25 Template:Version/de
+ 12.16%    6.179      1 Template:Userdocnavi/de
+ 11.12%    5.651      5 Template:VersionPlus/de
+  9.71%    4.937      2 Template:Docnav/de
+  9.01%    4.579      1 Template:TOCright
+  7.32%    3.721      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111200612 and revision id 1735987. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111200653 and revision id 1735991. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
