Created page with "===Punkte hinzufügen==="

--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -187,7 +187,9 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCosmeticLine.svg&amp;filetimestamp=20201127095856&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_2PointCosmeticLine.html" title="TechDraw 2PointCosmeticLine/de">Hilfslinie durch 2 Punkte hinzuf&uuml;gen</a>: F&uuml;gt eine Hilfslinie hinzu, die 2 Knoten verbindet</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_DecorateLine.svg&amp;filetimestamp=20241127175335&amp;.html" class="mw-file-description"><img src="../File/TechDraw_DecorateLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_DecorateLine.html" title="TechDraw DecorateLine/de">Liniendarstellung &auml;ndern</a>: &Auml;ndert das Aussehen ausgew&auml;hlter Linien.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ShowAll.svg&amp;filetimestamp=20201127100141&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ShowAll.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ShowAll.html" title="TechDraw ShowAll/de">Ausgeblendete Kanten ein-/ausblenden</a>: Blendet als unsichtbar gekennzeichnete Linien/Kanten einer Ansicht ein bzw. (wieder) aus.</li></ul>
-<h3><span class="mw-headline" id="Add_Vertices">Add Vertices</span></h3>
+<p><span id="Add_Vertices"></span>
+</p>
+<h3><span id="Punkte_hinzuf.C3.BCgen"></span><span class="mw-headline" id="Punkte_hinzuf&uuml;gen">Punkte hinzuf&uuml;gen</span></h3>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticVertex.svg&amp;filetimestamp=20240919162013&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticVertex.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_CosmeticVertex.html" title="TechDraw CosmeticVertex/de">Hilfspunkt hinzuf&uuml;gen</a>: F&uuml;gt einen Knoten hinzu, der nicht Teil der Quellgeometrie ist.</li></ul></dd></dl>
 </div>
@@ -301,13 +303,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111200654
+Cached time: 20260111200821
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.376 seconds
-Real time usage: 0.867 seconds
-Preprocessor visited node count: 872/1000000
+CPU time usage: 0.332 seconds
+Real time usage: 0.523 seconds
+Preprocessor visited node count: 873/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -317,18 +319,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.832      1 -total
- 28.61%   14.542      1 Template:TechDraw_Tools_navi/de
- 14.00%    7.117      2 Template:Navigation_menu_2
- 12.53%    6.372     25 Template:Version/de
- 12.16%    6.179      1 Template:Userdocnavi/de
- 11.12%    5.651      5 Template:VersionPlus/de
-  9.71%    4.937      2 Template:Docnav/de
-  9.01%    4.579      1 Template:TOCright
-  7.32%    3.721      1 Template:KEY
+100.00%   33.909      1 -total
+ 31.96%   10.837      1 Template:TechDraw_Tools_navi/de
+ 18.87%    6.399      5 Template:VersionPlus/de
+ 15.95%    5.407      2 Template:Navigation_menu_2
+ 13.19%    4.472     25 Template:Version/de
+ 11.29%    3.830      1 Template:Userdocnavi/de
+  9.57%    3.245      2 Template:Docnav/de
+  5.21%    1.766      1 Template:TOCright
+  3.01%    1.019      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111200653 and revision id 1735991. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111200820 and revision id 1735996. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
