--- a/wiki/de/TechDraw_CommandAddOffsetVertex.html
+++ b/wiki/de/TechDraw_CommandAddOffsetVertex.html
@@ -15,7 +15,7 @@
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw CommandAddOffsetVertex
+<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw BefehlKnotenVersetzen
 </p>
 </td></tr>
 <tr>
@@ -113,15 +113,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111200807
+Cached time: 20260111200910
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.102 seconds
+CPU time usage: 0.074 seconds
+Real time usage: 0.189 seconds
 Preprocessor visited node count: 303/1000000
-Post&#8208;expand include size: 27976/2097152 bytes
-Template argument size: 11079/2097152 bytes
+Post&#8208;expand include size: 27974/2097152 bytes
+Template argument size: 11077/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -129,18 +129,18 @@ Unstrip post&#8208;expand size: 1397/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.035      1 -total
- 35.42%    5.680      1 Template:TechDraw_Tools_navi/de
- 19.88%    3.188      2 Template:Navigation_menu_2
- 16.94%    2.717      2 Template:Docnav/de
- 12.77%    2.047      1 Template:GuiCommand/de
- 10.78%    1.728      1 Template:Userdocnavi/de
-  7.27%    1.165      1 Template:Caption
-  6.57%    1.054      3 Template:MenuCommand
-  6.46%    1.036      2 Template:Button
+100.00%   51.519      1 -total
+ 33.65%   17.335      1 Template:GuiCommand/de
+ 30.38%   15.653      1 Template:TechDraw_Tools_navi/de
+ 16.01%    8.250      2 Template:Navigation_menu_2
+ 12.04%    6.203      1 Template:Userdocnavi/de
+  8.74%    4.504      2 Template:Docnav/de
+  6.38%    3.288      1 Template:Caption
+  3.88%    2.000      3 Template:MenuCommand
+  2.61%    1.344      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331299-0!canonical and timestamp 20260111200807 and revision id 1735773. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331299-0!canonical and timestamp 20260111200910 and revision id 1735998. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
