--- a/wiki/Template;TechDraw_Tools_navi.html
+++ b/wiki/Template;TechDraw_Tools_navi.html
@@ -20,12 +20,9 @@
 <ul><li><b>Centerlines/Threading:</b> <a href="TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines">Circle Centerlines</a>, <a href="TechDraw_ExtensionHoleCircle.html" title="TechDraw ExtensionHoleCircle">Bolt Circle Centerlines</a>, <a href="TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide">Cosmetic Thread Hole Side View</a>, <a href="TechDraw_ExtensionThreadHoleBottom.html" title="TechDraw ExtensionThreadHoleBottom">Cosmetic Thread Hole Bottom View</a>, <a href="TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide">Cosmetic Thread Bolt Side View</a>, <a href="TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom">Cosmetic Thread Bolt Bottom View</a>, <a href="TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection">Cosmetic Intersection Vertices</a>, <a href="TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex">Offset Vertex</a>, <a href="TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle">Cosmetic 1 Point Circle</a>, <a href="TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle">Cosmetic 2 Point Circle</a>, <a href="TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points">Cosmetic 3 Point Circle</a>, <a href="TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc">Cosmetic Arc</a>, <a href="TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel">Cosmetic Parallel Line</a>, <a href="TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular">Cosmetic Perpendicular Line</a></li></ul>
 <ul><li><b>Format/Organize Dimensions</b> <a href="TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension">Horizontal Chain Dimension</a>, <a href="TechDraw_ExtensionCreateVertChainDimension.html" title="TechDraw ExtensionCreateVertChainDimension">Vertical Chain Dimension</a>, <a href="TechDraw_ExtensionCreateObliqueChainDimension.html" title="TechDraw ExtensionCreateObliqueChainDimension">Oblique Chain Dimension</a>, <a href="TechDraw_ExtensionCreateHorizCoordDimension.html" title="TechDraw ExtensionCreateHorizCoordDimension">Horizontal Coordinate Dimension</a>, <a href="TechDraw_ExtensionCreateVertCoordDimension.html" title="TechDraw ExtensionCreateVertCoordDimension">Vertical Coordinate Dimension</a>, <a href="TechDraw_ExtensionCreateObliqueCoordDimension.html" title="TechDraw ExtensionCreateObliqueCoordDimension">Oblique Coordinate Dimension</a>, <a href="TechDraw_ExtensionCreateHorizChamferDimension.html" title="TechDraw ExtensionCreateHorizChamferDimension">Horizontal Chamfer Dimension</a>, <a href="TechDraw_ExtensionCreateVertChamferDimension.html" title="TechDraw ExtensionCreateVertChamferDimension">Vertical Chamfer Dimension</a>, <a href="TechDraw_ExtensionCreateLengthArc.html" title="TechDraw ExtensionCreateLengthArc">Arc Length Dimension</a>, <a href="TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter">Insert '&#8960;' Prefix</a>, <a href="TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare">Insert '&#9633;' Prefix</a>, <a href="TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition">Insert 'n&times;' Prefix</a>, <a href="TechDraw_ExtensionRemovePrefixChar.html" title="TechDraw ExtensionRemovePrefixChar">Remove Prefix</a>, <a href="TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal">Increase Decimal Places</a>, <a href="TechDraw_ExtensionDecreaseDecimal.html" title="TechDraw ExtensionDecreaseDecimal">Decrease Decimal Places</a></li></ul>
 <hr>
-<p><br>
-</p>
-<ul><li><b>Annotations:</b></li></ul>
-<hr>
-<p><br>
-</p>
+<ul><li><b>Annotations:</b> <a href="TechDraw_Annotation.html" title="TechDraw Annotation">Text Annotation</a>, <a href="TechDraw_RichTextAnnotation.html" title="TechDraw RichTextAnnotation">Rich Text Annotation</a>, <a href="TechDraw_Balloon.html" title="TechDraw Balloon">Balloon Annotation</a>, <a href="TechDraw_AxoLengthDimension.html" title="TechDraw AxoLengthDimension">Axonometric Length Dimension</a></li></ul>
+<ul><li><b>Add Lines:</b> <a href="TechDraw_LeaderLine.html" title="TechDraw LeaderLine">Leader Line</a>, <a href="TechDraw_FaceCenterLine.html" title="TechDraw FaceCenterLine">Centerline on Face</a>, <a href="TechDraw_2LineCenterLine.html" title="TechDraw 2LineCenterLine">Centerline Between 2 Lines</a>, <a href="TechDraw_2PointCenterLine.html" title="TechDraw 2PointCenterLine">Centerline Between 2 Points</a>, <a href="TechDraw_2PointCosmeticLine.html" title="TechDraw 2PointCosmeticLine">Cosmetic Line Through 2 points</a>, <a href="TechDraw_DecorateLine.html" title="TechDraw DecorateLine">Edit Line Appearance</a>, <a href="TechDraw_ShowAll.html" title="TechDraw ShowAll">Toggle Edge Visibility</a></li></ul>
+<ul><li><b>Add Vertices:</b> <a href="TechDraw_CosmeticVertex.html" title="TechDraw CosmeticVertex">Cosmetic Vertex</a>, <a href="TechDraw_Midpoints.html" title="TechDraw Midpoints">Midpoint Vertices</a>, <a href="TechDraw_Quadrants.html" title="TechDraw Quadrants">Quadrant Vertices</a></li></ul>
 <hr>
 <ul><li><b>Miscellaneous:</b> <a href="TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser">Remove Cosmetic Object</a></li></ul>
 <hr>
@@ -40,15 +37,15 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260111200107
+Cached time: 20260111200830
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.021 seconds
-Real time usage: 0.065 seconds
-Preprocessor visited node count: 115/1000000
-Post&#8208;expand include size: 6530/2097152 bytes
-Template argument size: 5705/2097152 bytes
+CPU time usage: 0.028 seconds
+Real time usage: 0.030 seconds
+Preprocessor visited node count: 129/1000000
+Post&#8208;expand include size: 7245/2097152 bytes
+Template argument size: 6420/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -56,11 +53,11 @@ Unstrip post&#8208;expand size: 40/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.660      1 Template:Navigation_menu_2
-100.00%    6.660      1 -total
+100.00%    3.842      1 Template:Navigation_menu_2
+100.00%    3.842      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:117245-0!canonical and timestamp 20260111200112 and revision id 1735967. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:117245-0!canonical and timestamp 20260111200910 and revision id 1735999. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
