--- a/wiki/de/TechDraw_CommandAddOffsetVertex.html
+++ b/wiki/de/TechDraw_CommandAddOffsetVertex.html
@@ -54,7 +54,7 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
-<p>Der Befehl <b>TechDraw CommandAddOffsetVertex</b> f&uuml;gt einen Hilfspunkt mit einem bestimmten Versatz zu einem ausgew&auml;hlten Knoten hinzu.
+<p>Der Befehl <b>TechDraw BefehlKnotenVersetzen</b> f&uuml;gt einen Hilfspunkt mit einem bestimmten Versatz zu einem ausgew&auml;hlten Knoten hinzu.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_CommandAddOffsetVertex_Example.png&amp;filetimestamp=20231224124245&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CommandAddOffsetVertex_Example.png" decoding="async" width="200" height="126" class="mw-file-element" data-file-width="484" data-file-height="306"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Ausgew&auml;hlter Knoten und hinzugef&uuml;gter Hilfspunkt</p>
@@ -113,12 +113,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111200910
+Cached time: 20260111200924
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.189 seconds
+CPU time usage: 0.092 seconds
+Real time usage: 0.158 seconds
 Preprocessor visited node count: 303/1000000
 Post&#8208;expand include size: 27974/2097152 bytes
 Template argument size: 11077/2097152 bytes
@@ -129,18 +129,18 @@ Unstrip post&#8208;expand size: 1397/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.519      1 -total
- 33.65%   17.335      1 Template:GuiCommand/de
- 30.38%   15.653      1 Template:TechDraw_Tools_navi/de
- 16.01%    8.250      2 Template:Navigation_menu_2
- 12.04%    6.203      1 Template:Userdocnavi/de
-  8.74%    4.504      2 Template:Docnav/de
-  6.38%    3.288      1 Template:Caption
-  3.88%    2.000      3 Template:MenuCommand
-  2.61%    1.344      2 Template:Button
+100.00%   30.110      1 -total
+ 32.59%    9.812      1 Template:TechDraw_Tools_navi/de
+ 18.07%    5.441      1 Template:Userdocnavi/de
+ 16.86%    5.078      2 Template:Navigation_menu_2
+ 16.16%    4.865      1 Template:GuiCommand/de
+ 11.84%    3.565      3 Template:MenuCommand
+  9.65%    2.904      2 Template:Docnav/de
+  4.62%    1.392      1 Template:Caption
+  3.49%    1.050      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331299-0!canonical and timestamp 20260111200910 and revision id 1735998. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331299-0!canonical and timestamp 20260111200924 and revision id 1736001. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
