Created page with "|Rotate_view_text=Podržte levé tlačítko myši a přesuňte ukazatel. V [[Sketcher Workbench/cs|Sketcheru]] a dalších režimech úprav je toto chování zakázáno. Podržte klávesu {{KEY|Alt}} a současně stiskněte tlačítko myši, abyste vstoupili do režimu rotace."

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -227,12 +227,10 @@
 <td>Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat pohled.
 <p>Kliknut&iacute;m na prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i se pohled znovu vycentruje na pozici ukazatele. Alternativn&#283; nami&#345;te ukazatel a stiskn&#283;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">H</span> na kl&aacute;vesnici.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Hold the left mouse button, then move the pointer.
-<p>In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> and other edit modes, this behavior is disabled. Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> when pressing the mouse button to enter rotation mode.
+</td>
+<td>Podr&#382;te lev&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
+<p>V <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcheru</a> a dal&scaron;&iacute;ch re&#382;imech &uacute;prav je toto chov&aacute;n&iacute; zak&aacute;z&aacute;no. Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> a sou&#269;asn&#283; stiskn&#283;te tla&#269;&iacute;tko my&scaron;i, abyste vstoupili do re&#382;imu rotace.
 </p>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td colspan="2">Hold the right mouse button, then move the pointer.
@@ -1134,15 +1132,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111200751
+Cached time: 20260111201055
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.320 seconds
-Real time usage: 0.464 seconds
-Preprocessor visited node count: 1634/1000000
-Post&#8208;expand include size: 78274/2097152 bytes
-Template argument size: 28975/2097152 bytes
+CPU time usage: 0.323 seconds
+Real time usage: 0.439 seconds
+Preprocessor visited node count: 1633/1000000
+Post&#8208;expand include size: 78270/2097152 bytes
+Template argument size: 28971/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1150,19 +1148,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   82.991      1 -total
- 10.66%    8.845      1 Template:Userdocnavi/cs
- 10.37%    8.610      8 Template:ASCII
-  6.93%    5.755      1 Template:OpenSCAD_Navigation
-  6.42%    5.332      1 Template:Inventor_Navigation/cs
-  6.17%    5.124      1 Template:Navigation_menu_2
-  5.28%    4.383     75 Template:KEY
-  4.69%    3.895      2 Template:OpenInventor_Navigation
-  4.54%    3.764      1 Template:SolidWorks_Navigation
-  4.48%    3.715      2 Template:Docnav
+100.00%   82.661      1 -total
+ 16.11%   13.316      1 Template:Blender_Navigation
+ 11.08%    9.161      8 Template:ASCII
+  8.37%    6.921      1 Template:Userdocnavi/cs
+  5.64%    4.666      1 Template:Inventor_Navigation/cs
+  4.89%    4.041      1 Template:OpenCascade_Navigation
+  4.41%    3.648     75 Template:KEY
+  4.29%    3.544      1 Template:OpenSCAD_Navigation
+  3.79%    3.134      1 Template:Gesture_Navigation
+  3.68%    3.042      1 Template:CAD_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111200750 and revision id 1735993. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201054 and revision id 1736003. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
