--- a/wiki/de/TechDraw_CosmeticCircle.html
+++ b/wiki/de/TechDraw_CosmeticCircle.html
@@ -3,18 +3,16 @@
 <li><a href="../TechDraw_CosmeticCircle.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw CosmeticCircle (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Cercle cosm&eacute;tique (74% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Cerchio cosmetico (74% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Dodaj okr&#261;g kosmetyczny (74% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj okr&#261;g kosmetyczny (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw CosmeticCircle
 (&#1063;&#1077;&#1088;&#1090;&#1105;&#1078; &#1050;&#1086;&#1089;&#1084;&#1077;&#1090;&#1080;&#1095;&#1077;&#1089;&#1082;&#1080;&#1081; &#1050;&#1088;&#1091;&#1075;) (11% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="&#44592;&#49696;&#46020;&#47732; &#44984;&#48136;&#50896; (74% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_2PointCosmeticLine.html" title="TechDraw 2PointCosmeticLine/de">2PunkteHilfslinie</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_DecorateLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_DecorateLine.html" title="TechDraw DecorateLine/de">Liniendarstellung&Auml;ndern</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/de">BefehlKnotenVersetzen</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/de">Erg&auml;nzungHilfskreisZeichnen</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -152,35 +150,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111112523
+Cached time: 20260111201056
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.076 seconds
-Real time usage: 0.121 seconds
-Preprocessor visited node count: 364/1000000
-Post&#8208;expand include size: 29007/2097152 bytes
-Template argument size: 11218/2097152 bytes
+CPU time usage: 0.075 seconds
+Real time usage: 0.134 seconds
+Preprocessor visited node count: 363/1000000
+Post&#8208;expand include size: 29121/2097152 bytes
+Template argument size: 11294/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1649/5000000 bytes
+Unstrip post&#8208;expand size: 1654/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.266      1 -total
- 22.43%    6.790      1 Template:TechDraw_Tools_navi/de
- 15.13%    4.579      1 Template:Userdocnavi/de
- 12.43%    3.763      1 Template:Version/de
- 11.21%    3.394      2 Template:Navigation_menu_2
- 10.49%    3.176      2 Template:Docnav/de
-  9.28%    2.808      1 Template:Caption
-  9.11%    2.757      1 Template:GuiCommand/de
-  7.19%    2.175      1 Template:Incode
-  4.62%    1.397      4 Template:Button
+100.00%   24.678      1 -total
+ 26.76%    6.605      1 Template:TechDraw_Tools_navi/de
+ 17.51%    4.322      2 Template:Navigation_menu_2
+ 12.90%    3.184      2 Template:Docnav/de
+ 10.60%    2.616      1 Template:GuiCommand/de
+  7.48%    1.845      1 Template:Userdocnavi/de
+  7.00%    1.728      4 Template:Button
+  6.42%    1.585      1 Template:Version/de
+  6.26%    1.545      1 Template:Caption
+  5.56%    1.371      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322534-0!canonical and timestamp 20260111112523 and revision id 1733336. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322534-0!canonical and timestamp 20260111201056 and revision id 1736005. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
