--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -231,10 +231,8 @@
 <td>Podr&#382;te lev&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 <p>V <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcheru</a> a dal&scaron;&iacute;ch re&#382;imech &uacute;prav je toto chov&aacute;n&iacute; zak&aacute;z&aacute;no. Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> a sou&#269;asn&#283; stiskn&#283;te tla&#269;&iacute;tko my&scaron;i, abyste vstoupili do re&#382;imu rotace.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td colspan="2">Hold the right mouse button, then move the pointer.
-
+</td>
+<td colspan="2">Podr&#382;te prav&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Hold both left and right mouse buttons, then move the pointer sideways.
@@ -1132,15 +1130,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111201055
+Cached time: 20260111201121
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.323 seconds
-Real time usage: 0.439 seconds
-Preprocessor visited node count: 1633/1000000
-Post&#8208;expand include size: 78270/2097152 bytes
-Template argument size: 28971/2097152 bytes
+CPU time usage: 0.298 seconds
+Real time usage: 0.593 seconds
+Preprocessor visited node count: 1632/1000000
+Post&#8208;expand include size: 78217/2097152 bytes
+Template argument size: 28918/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1148,19 +1146,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   82.661      1 -total
- 16.11%   13.316      1 Template:Blender_Navigation
- 11.08%    9.161      8 Template:ASCII
-  8.37%    6.921      1 Template:Userdocnavi/cs
-  5.64%    4.666      1 Template:Inventor_Navigation/cs
-  4.89%    4.041      1 Template:OpenCascade_Navigation
-  4.41%    3.648     75 Template:KEY
-  4.29%    3.544      1 Template:OpenSCAD_Navigation
-  3.79%    3.134      1 Template:Gesture_Navigation
-  3.68%    3.042      1 Template:CAD_Navigation
+100.00%  108.660      1 -total
+ 10.09%   10.959      1 Template:Userdocnavi/cs
+  8.34%    9.065      8 Template:ASCII
+  6.37%    6.918      1 Template:SiemensNX_Navigation
+  5.94%    6.454      1 Template:Touchpad_Navigation/cs
+  5.68%    6.173      1 Template:Inventor_Navigation/cs
+  5.59%    6.069      1 Template:TinkerCAD_Navigation
+  5.53%    6.006      1 Template:OpenSCAD_Navigation
+  4.98%    5.408      2 Template:Button
+  4.45%    4.836      9 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201054 and revision id 1736003. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201121 and revision id 1736007. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
