--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -190,9 +190,7 @@
 <p><span id="Add_Vertices"></span>
 </p>
 <h3><span id="Punkte_hinzuf.C3.BCgen"></span><span class="mw-headline" id="Punkte_hinzuf&uuml;gen">Punkte hinzuf&uuml;gen</span></h3>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticVertex.svg&amp;filetimestamp=20240919162013&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticVertex.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_CosmeticVertex.html" title="TechDraw CosmeticVertex/de">Hilfspunkt hinzuf&uuml;gen</a>: F&uuml;gt einen Knoten hinzu, der nicht Teil der Quellgeometrie ist.</li></ul></dd></dl>
-</div>
+<ul><li><span id="TechDraw_CosmeticVertexGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticVertex.svg&amp;filetimestamp=20240919162013&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticVertex.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_CosmeticVertex.html" title="TechDraw CosmeticVertex/de">Hilfspunkt</a>: F&uuml;gt einen Punkt hinzu, der nicht Teil der Quellgeometrie ist.</span></li></ul>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_Midpoints.svg&amp;filetimestamp=20240710132001&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Midpoints.html" title="TechDraw Midpoints/de">Kantenmittelpunkte hinzuf&uuml;gen</a>: F&uuml;gt Hilfspunkte an den Mittenpunkten der ausgew&auml;hlten Kanten hinzu.</li></ul></dd></dl>
 </div>
@@ -303,13 +301,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111200821
+Cached time: 20260111201131
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.332 seconds
-Real time usage: 0.523 seconds
-Preprocessor visited node count: 873/1000000
+CPU time usage: 0.276 seconds
+Real time usage: 0.364 seconds
+Preprocessor visited node count: 875/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -319,18 +317,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.909      1 -total
- 31.96%   10.837      1 Template:TechDraw_Tools_navi/de
- 18.87%    6.399      5 Template:VersionPlus/de
- 15.95%    5.407      2 Template:Navigation_menu_2
- 13.19%    4.472     25 Template:Version/de
- 11.29%    3.830      1 Template:Userdocnavi/de
-  9.57%    3.245      2 Template:Docnav/de
-  5.21%    1.766      1 Template:TOCright
-  3.01%    1.019      1 Template:KEY
+100.00%   33.705      1 -total
+ 38.21%   12.880      1 Template:TechDraw_Tools_navi/de
+ 22.33%    7.527      2 Template:Navigation_menu_2
+ 11.08%    3.735      2 Template:Docnav/de
+ 10.37%    3.497     25 Template:Version/de
+ 10.32%    3.480      1 Template:KEY
+  8.58%    2.892      1 Template:Userdocnavi/de
+  7.85%    2.646      5 Template:VersionPlus/de
+  7.17%    2.416      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111200820 and revision id 1735996. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111201130 and revision id 1736009. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
