--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -233,10 +233,8 @@
 </p>
 </td>
 <td colspan="2">Podr&#382;te prav&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Hold both left and right mouse buttons, then move the pointer sideways.
-
+</td>
+<td>Podr&#382;te lev&eacute; i prav&eacute; tla&#269;&iacute;tko my&scaron;i a posu&#328;te ukazatel na stranu.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr style="text-align:center;">
@@ -1130,15 +1128,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111201121
+Cached time: 20260111201203
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.298 seconds
-Real time usage: 0.593 seconds
-Preprocessor visited node count: 1632/1000000
-Post&#8208;expand include size: 78217/2097152 bytes
-Template argument size: 28918/2097152 bytes
+CPU time usage: 0.333 seconds
+Real time usage: 0.502 seconds
+Preprocessor visited node count: 1631/1000000
+Post&#8208;expand include size: 78160/2097152 bytes
+Template argument size: 28861/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1146,19 +1144,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  108.660      1 -total
- 10.09%   10.959      1 Template:Userdocnavi/cs
-  8.34%    9.065      8 Template:ASCII
-  6.37%    6.918      1 Template:SiemensNX_Navigation
-  5.94%    6.454      1 Template:Touchpad_Navigation/cs
-  5.68%    6.173      1 Template:Inventor_Navigation/cs
-  5.59%    6.069      1 Template:TinkerCAD_Navigation
-  5.53%    6.006      1 Template:OpenSCAD_Navigation
-  4.98%    5.408      2 Template:Button
-  4.45%    4.836      9 Template:MenuCommand
+100.00%  102.101      1 -total
+  8.39%    8.565      8 Template:ASCII
+  7.58%    7.736      2 Template:OpenInventor_Navigation
+  7.27%    7.427      1 Template:OpenSCAD_Navigation
+  7.07%    7.219      1 Template:Userdocnavi/cs
+  6.95%    7.094      1 Template:SiemensNX_Navigation
+  5.32%    5.429      1 Template:Revit_Navigation
+  5.14%    5.250      1 Template:SolidWorks_Navigation
+  4.57%    4.667      1 Template:Inventor_Navigation/cs
+  4.56%    4.658     75 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201121 and revision id 1736007. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201202 and revision id 1736011. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
