--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -235,8 +235,7 @@
 <td colspan="2">Podr&#382;te prav&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 </td>
 <td>Podr&#382;te lev&eacute; i prav&eacute; tla&#269;&iacute;tko my&scaron;i a posu&#328;te ukazatel na stranu.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr style="text-align:center;">
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Touch_Tap.svg&amp;filetimestamp=20150405224336&amp;.html" class="mw-file-description"><img src="../File/Touch_Tap.svg" decoding="async" width="100" height="100" class="mw-file-element" data-file-width="100" data-file-height="100"></a></span>
 </td>
@@ -251,8 +250,7 @@
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Touch_Rotate.svg&amp;filetimestamp=20150405224317&amp;.html" class="mw-file-description"><img src="../File/Touch_Rotate.svg" decoding="async" width="100" height="100" class="mw-file-element" data-file-width="100" data-file-height="100"></a></span>
 </td></tr>
 <tr style="vertical-align:top; background: #efffef;">
-<td>Tap to select.
-
+<td>Klikn&#283;te pro v&yacute;b&#283;r.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Drag two fingers (pinch) closer or farther apart.
@@ -1128,15 +1126,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111201203
+Cached time: 20260111201235
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.333 seconds
-Real time usage: 0.502 seconds
-Preprocessor visited node count: 1631/1000000
-Post&#8208;expand include size: 78160/2097152 bytes
-Template argument size: 28861/2097152 bytes
+CPU time usage: 0.288 seconds
+Real time usage: 0.380 seconds
+Preprocessor visited node count: 1630/1000000
+Post&#8208;expand include size: 78111/2097152 bytes
+Template argument size: 28812/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1144,19 +1142,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  102.101      1 -total
-  8.39%    8.565      8 Template:ASCII
-  7.58%    7.736      2 Template:OpenInventor_Navigation
-  7.27%    7.427      1 Template:OpenSCAD_Navigation
-  7.07%    7.219      1 Template:Userdocnavi/cs
-  6.95%    7.094      1 Template:SiemensNX_Navigation
-  5.32%    5.429      1 Template:Revit_Navigation
-  5.14%    5.250      1 Template:SolidWorks_Navigation
-  4.57%    4.667      1 Template:Inventor_Navigation/cs
-  4.56%    4.658     75 Template:KEY
+100.00%   59.567      1 -total
+ 12.81%    7.628      8 Template:ASCII
+  9.13%    5.436      1 Template:Userdocnavi/cs
+  6.47%    3.857      1 Template:OpenSCAD_Navigation
+  5.89%    3.508     75 Template:KEY
+  5.87%    3.494      2 Template:OpenInventor_Navigation
+  4.50%    2.679      1 Template:Revit_Navigation
+  4.14%    2.468      1 Template:Blender_Navigation
+  3.97%    2.362      1 Template:SiemensNX_Navigation
+  3.85%    2.291      1 Template:Gesture_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201202 and revision id 1736011. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201235 and revision id 1736013. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
