Updated page TechDraw Workbench/de

--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -189,7 +189,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ShowAll.svg&amp;filetimestamp=20201127100141&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ShowAll.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ShowAll.html" title="TechDraw ShowAll/de">Ausgeblendete Kanten ein-/ausblenden</a>: Blendet als unsichtbar gekennzeichnete Linien/Kanten einer Ansicht ein bzw. (wieder) aus.</li></ul>
 <p><span id="Add_Vertices"></span>
 </p>
-<h3><span id="Punkte_hinzuf.C3.BCgen"></span><span class="mw-headline" id="Punkte_hinzuf&uuml;gen">Punkte hinzuf&uuml;gen</span></h3>
+<h3><span id="Knoten_hinzuf.C3.BCgen"></span><span class="mw-headline" id="Knoten_hinzuf&uuml;gen">Knoten hinzuf&uuml;gen</span></h3>
 <ul><li><span id="TechDraw_CosmeticVertexGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticVertex.svg&amp;filetimestamp=20240919162013&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticVertex.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_CosmeticVertex.html" title="TechDraw CosmeticVertex/de">Hilfspunkt</a>: F&uuml;gt einen Punkt hinzu, der nicht Teil der Quellgeometrie ist.</span></li></ul>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_Midpoints.svg&amp;filetimestamp=20240710132001&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Midpoints.html" title="TechDraw Midpoints/de">Kantenmittelpunkte hinzuf&uuml;gen</a>: F&uuml;gt Hilfspunkte an den Mittenpunkten der ausgew&auml;hlten Kanten hinzu.</li></ul></dd></dl>
@@ -301,12 +301,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111201131
+Cached time: 20260111201243
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.276 seconds
-Real time usage: 0.364 seconds
+CPU time usage: 0.280 seconds
+Real time usage: 0.439 seconds
 Preprocessor visited node count: 875/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
@@ -317,18 +317,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.705      1 -total
- 38.21%   12.880      1 Template:TechDraw_Tools_navi/de
- 22.33%    7.527      2 Template:Navigation_menu_2
- 11.08%    3.735      2 Template:Docnav/de
- 10.37%    3.497     25 Template:Version/de
- 10.32%    3.480      1 Template:KEY
-  8.58%    2.892      1 Template:Userdocnavi/de
-  7.85%    2.646      5 Template:VersionPlus/de
-  7.17%    2.416      1 Template:TOCright
+100.00%   23.351      1 -total
+ 32.03%    7.479      1 Template:TechDraw_Tools_navi/de
+ 21.32%    4.979      2 Template:Navigation_menu_2
+ 14.92%    3.483      5 Template:VersionPlus/de
+ 13.86%    3.237      2 Template:Docnav/de
+  9.91%    2.314     25 Template:Version/de
+  7.53%    1.759      1 Template:Userdocnavi/de
+  7.27%    1.697      1 Template:KEY
+  5.00%    1.168      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111201130 and revision id 1736009. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111201243 and revision id 1736015. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
