--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -251,10 +251,8 @@
 </td></tr>
 <tr style="vertical-align:top; background: #efffef;">
 <td>Klikn&#283;te pro v&yacute;b&#283;r.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Drag two fingers (pinch) closer or farther apart.
-
+</td>
+<td>P&#345;ibli&#382;te nebo oddalte dva prsty (&scaron;t&iacute;pnut&iacute;).
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Drag with one finger to rotate.
@@ -1126,15 +1124,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111201235
+Cached time: 20260111201327
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.288 seconds
-Real time usage: 0.380 seconds
-Preprocessor visited node count: 1630/1000000
-Post&#8208;expand include size: 78111/2097152 bytes
-Template argument size: 28812/2097152 bytes
+CPU time usage: 0.342 seconds
+Real time usage: 0.469 seconds
+Preprocessor visited node count: 1629/1000000
+Post&#8208;expand include size: 78054/2097152 bytes
+Template argument size: 28755/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1142,19 +1140,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.567      1 -total
- 12.81%    7.628      8 Template:ASCII
-  9.13%    5.436      1 Template:Userdocnavi/cs
-  6.47%    3.857      1 Template:OpenSCAD_Navigation
-  5.89%    3.508     75 Template:KEY
-  5.87%    3.494      2 Template:OpenInventor_Navigation
-  4.50%    2.679      1 Template:Revit_Navigation
-  4.14%    2.468      1 Template:Blender_Navigation
-  3.97%    2.362      1 Template:SiemensNX_Navigation
-  3.85%    2.291      1 Template:Gesture_Navigation
+100.00%   95.494      1 -total
+ 11.73%   11.203      8 Template:ASCII
+  8.75%    8.352      1 Template:Userdocnavi/cs
+  7.37%    7.037      1 Template:SolidWorks_Navigation
+  6.03%    5.757      1 Template:OpenSCAD_Navigation
+  5.54%    5.289      1 Template:TinkerCAD_Navigation
+  5.10%    4.874     75 Template:KEY
+  5.09%    4.859      1 Template:SiemensNX_Navigation
+  4.59%    4.387      1 Template:Touchpad_Navigation/cs
+  4.23%    4.044      2 Template:OpenInventor_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201235 and revision id 1736013. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201326 and revision id 1736017. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
