Created page with "Alternativně můžete klepnout a podržet prst a poté táhnout. Tím simulujete posun pravým tlačítkem myši."

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -259,10 +259,8 @@
 </p>
 </td>
 <td colspan="2">P&#345;et&aacute;hn&#283;te dv&#283;ma prsty.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Alternatively, tap and hold, then drag. This simulates the pan with the right mouse button.
+<p>Alternativn&#283; m&#367;&#382;ete klepnout a podr&#382;et prst a pot&eacute; t&aacute;hnout. T&iacute;m simulujete posun prav&yacute;m tla&#269;&iacute;tkem my&scaron;i.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Rotate the imaginary line formed by two touch points.
@@ -1118,15 +1116,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111201552
+Cached time: 20260111201710
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.312 seconds
-Real time usage: 0.468 seconds
-Preprocessor visited node count: 1626/1000000
-Post&#8208;expand include size: 77901/2097152 bytes
-Template argument size: 28602/2097152 bytes
+CPU time usage: 0.297 seconds
+Real time usage: 0.419 seconds
+Preprocessor visited node count: 1625/1000000
+Post&#8208;expand include size: 77868/2097152 bytes
+Template argument size: 28569/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1134,19 +1132,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   85.851      1 -total
- 22.80%   19.571      1 Template:Userdocnavi/cs
- 18.15%   15.578      1 Template:Navigation_menu_2
-  9.99%    8.572      8 Template:ASCII
-  8.92%    7.658     75 Template:KEY
-  7.80%    6.700      1 Template:OpenCascade_Navigation
-  6.36%    5.460      1 Template:SiemensNX_Navigation
-  5.26%    4.512      1 Template:OpenSCAD_Navigation
-  4.03%    3.462      1 Template:Inventor_Navigation/cs
-  3.76%    3.230      1 Template:SolidWorks_Navigation
+100.00%   52.148      1 -total
+ 12.83%    6.690      8 Template:ASCII
+ 10.83%    5.647      1 Template:Userdocnavi/cs
+  7.10%    3.705      2 Template:Docnav
+  6.78%    3.535     75 Template:KEY
+  5.19%    2.705      1 Template:OpenSCAD_Navigation
+  4.91%    2.560      1 Template:Revit_Navigation
+  4.57%    2.381      1 Template:Inventor_Navigation/cs
+  4.35%    2.271      1 Template:Navigation_menu_2
+  3.95%    2.059      1 Template:Blender_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201551 and revision id 1736023. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201710 and revision id 1736025. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
