Created page with "Tato metoda je ve výchozím nastavení zakázána. Chcete-li tuto funkci povolit, přejděte do {{MenuCommand|Úpravyt → Předvolby → Zobrazení → Navigace}} a zrušte zaškrtnutí políčka "Zakázat gesto naklonění dotykové obrazovky". }}"

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -263,11 +263,9 @@
 </p>
 </td>
 <td>Oto&#269;te pomyslnou &#269;&aacute;ru tvo&#345;enou dv&#283;ma dotykov&yacute;mi body.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>This method is disabled by default. To enable, go to <b>Edit &rarr; Preferences &rarr; Display &rarr; Navigation</b>, and uncheck the "Disable touchscreen tilt gesture" checkbox.
+<p>Tato metoda je ve v&yacute;choz&iacute;m nastaven&iacute; zak&aacute;z&aacute;na. Chcete-li tuto funkci povolit, p&#345;ejd&#283;te do <b>&Uacute;pravyt &rarr; P&#345;edvolby &rarr; Zobrazen&iacute; &rarr; Navigace</b> a zru&scaron;te za&scaron;krtnut&iacute; pol&iacute;&#269;ka "Zak&aacute;zat gesto naklon&#283;n&iacute; dotykov&eacute; obrazovky".
 </p>
-</div></td></tr></tbody></table>
-
+</td></tr></tbody></table>
 <p><span id="Maya-Gesture_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="Maya-Gesture_Navigace">Maya-Gesture Navigace</span></h3>
@@ -1114,15 +1112,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111201739
+Cached time: 20260111202009
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.268 seconds
-Real time usage: 0.360 seconds
-Preprocessor visited node count: 1624/1000000
-Post&#8208;expand include size: 77817/2097152 bytes
-Template argument size: 28518/2097152 bytes
+CPU time usage: 0.310 seconds
+Real time usage: 0.412 seconds
+Preprocessor visited node count: 1623/1000000
+Post&#8208;expand include size: 77841/2097152 bytes
+Template argument size: 28542/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1130,19 +1128,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   53.871      1 -total
- 13.55%    7.300      8 Template:ASCII
-  8.83%    4.758      1 Template:Userdocnavi/cs
-  7.44%    4.008      1 Template:OpenSCAD_Navigation
-  5.36%    2.889     75 Template:KEY
-  4.57%    2.463      1 Template:Gesture_Navigation
-  4.32%    2.327      1 Template:Blender_Navigation
-  4.25%    2.292      1 Template:SolidWorks_Navigation
-  4.20%    2.265      1 Template:Inventor_Navigation/cs
-  4.06%    2.187      1 Template:Touchpad_Navigation
+100.00%   54.513      1 -total
+ 13.94%    7.597      8 Template:ASCII
+  9.28%    5.061      1 Template:Userdocnavi/cs
+  6.04%    3.295      1 Template:OpenSCAD_Navigation
+  5.92%    3.230     75 Template:KEY
+  4.35%    2.370      1 Template:TOCright
+  4.29%    2.337      1 Template:CAD_Navigation
+  4.26%    2.324      1 Template:Blender_Navigation
+  4.04%    2.204      1 Template:Touchpad_Navigation
+  3.94%    2.148      1 Template:Touchpad_Navigation/cs
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111201738 and revision id 1736027. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202009 and revision id 1736029. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
